# reactix

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  package-lock.json
.circleci/: config.yml
.github/workflows/: client.yml  main.yml
client/: .eslintrc.json  .prettierignore  .prettierrc.json  babel.config.js  custom.d.ts  jest.config.ts  package-lock.json  package.json  tsconfig.json  webpack.client.build.js  webpack.dev.js  webpack.prod.js  webpack.server.build.js
client/__tests__/: Link.test.tsx
client/__tests__/__snapshots__/: Link.test.tsx.snap
client/cypress/integration/: initial_test.ts
client/public/: index.html
client/server/: index.ts  template.tsx
client/src/: App.tsx  index.tsx  ssr.tsx
client/src/@types/: globals.d.ts
client/src/components/: Counter.test.tsx  Counter.tsx  Link.tsx  Navbar.tsx
client/src/pages/: 404.tsx  About.tsx  Home.tsx  Posts.tsx
client/src/styles/: _animations.scss  index.scss
server/: Cargo.toml
server/src/: main.rs  run.rs
src/: lib.rs  main.rs  run.rs
tests/: app_checks.rs
