[package]
name = "reactix"
version = "0.1.0"
authors = ["V. Ageno <valerioageno@yahoo.it>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "reactix"

[dependencies]
actix-files = "0.6.0-beta.4"
actix-rt = "2.2.0"
actix-service = "=2.0.0-beta.5"
actix-web = "=4.0.0-beta.5"
futures = "0.3.14"
ssr_rs = "0.2.2"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = "0.11"